--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "license": "MIT",
-  "peerDependencies": {
-    "fp-ts": "^2.9.5"
-  },
+  "peerDependencies": {},
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^26.0.20",
