--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "ts-typelevel-boolean",
-  "homepage": "http://",
+  "homepage": "https://github.com/no-day/ts-typelevel-boolean",
   "version": "1.0.1",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "license": "MIT",
   "peerDependencies": {},
   "dependencies": {},
